# VeritasGraph

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_VERITASGRAPH.md  index.html  pyproject.toml  requirements.txt  stargazers.yml  start-server.ps1  ~$README.md
.github/workflows/: main.yml  pages-studio.yml  stargazers.yml
README_files/: filelist.xml
api/: README.md
cookbook/: README.md  real_pdf_accuracy_report.json  test_hierarchical_tree_accuracy.ipynb
demos/agent-studio/: README.md  index.html  sample_pipeline.py
demos/foundry-studio/: index.html
demos/policy-compliance/: README.md  index.html  record.py
docker/five-minute-magic-onboarding/: .env  README.md  docker-compose.yaml
docs/: LINUX_DEPLOYMENT.md  index.html
docs/demo/: index.html
docs/studio/: index.html
finetune/: data.jsonl  offlinetraining.py  requirements.txt
graphrag-ollama-config/: .env  .env.openai.example  OPENAI_COMPATIBLE_API.md  README.md  REASONING_SEARCH_GUIDE.md  api.py  app.py  graph_visualizer.py  ingest.py  ingest_structured.py  openai_config.py  policy_search.py  reasoning_search.py  requirements.txt  settings_backup.yaml  settings_openai.yaml  settings_v2.yaml  test_chat.py  test_reasoning_search.py
graphrag-ollama-config/cookbook/: veritasgraph_demo.ipynb  vision_native_rag.ipynb
graphrag-ollama-config/input/: article_Unknown_Title_d8de84d9.txt  elite_athlete_recruitment.txt  internationa.txt  ncaa_eligibility_guide.txt  sports.txt  student_visa_guide.txt  text_THÔNG_TƯ_SỬA_ĐỔI_BỔ_SUNG_MỘT_SỐ_ĐIỀU_CỦA_THÔNG_TƯ__85df99d6.txt  text_bibin_1571bcfc.txt  youtube_5_Free_Online_Courses_From_Harvard_University_To_B_e6a9bd75.txt  youtube_How_I_make_science_animations_da297b26.txt  youtube_How_to_Use_Excel_to_Create_a_Project_Management_Da_b96c18e9.txt  youtube_I_just_replaced_myself_with_Clawdbot_heres_how_3b424534.txt  youtube_They_Want_Me_Dead_The_Cost_Of_Exposing_Minnesotas__0552f0da.txt  youtube_YouTube_Video_GfZneDlvPKQ_c61438f4.txt  youtube_YouTube_Video_t_UwXi46iSA_2e245d1e.txt
marketing/: draft_opener.py  launch_checklist.md  og_card.html  post_copy.md
mcp/veritas-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  cursor_rules.md  docker-compose.yml  mcp_config_sse_example.json  mcp_config_stdio_example.json  pyproject.toml  quick_test.py  test_query.py  test_tools.py  veritas_mcp_server.py
scripts/: install-studio-service.sh  start-studio-with-tunnel.sh  start-with-github-sync.sh  start-with-netlify.sh  start-with-pages-sync.sh  veritasgraph-pages-sync.service  veritasgraph-studio.service
studio_api/: MANUAL_TEST.md  README.md  __init__.py  ccr.py  compression.py  dependencies.py  graphrag_engine.py  main.py  models.py  orchestrator.py  store.py
submission/veritasgraph_rag/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
submission/veritasgraph_rag/input/: .gitkeep
submission/veritasgraph_rag/veritasgraph_rag/: __init__.py  config.py  ingest.py  llm.py  retriever.py  ui.py
tests/: __init__.py  test_cli.py  test_models.py  test_policy_compliance_demo.py
veritas-reason/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  README_VERITASREASON.md  SECURITY.md  SUPPORT.md  mkdocs.yml  plan.md  pyproject.toml  setup_docs.py
veritas-scope/: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
veritasgraph/: cli.py
(+896 files in other folders)
