[project]
name = "veritasgraph-rag"
version = "0.1.0"
description = "Sovereign GraphRAG with tree-search navigation and verifiable attribution. Showcase entry for awesome-ai-apps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Bibin Prathap", email = "bibinprathap@example.com" },
]
keywords = ["graphrag", "rag", "knowledge-graph", "ollama", "attribution"]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "openai>=1.40.0",
    "ollama>=0.3.0",
    "graphrag>=0.5.0",
    "lancedb>=0.13.0",
    "networkx>=3.2",
    "gradio>=4.44.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0", "black>=24.8.0", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/bibinprathap/VeritasGraph"
Repository = "https://github.com/bibinprathap/VeritasGraph"
Issues = "https://github.com/bibinprathap/VeritasGraph/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["veritasgraph_rag"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
